--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,7 @@
   <parent>
     <groupId>io.prestosql</groupId>
     <artifactId>presto-root</artifactId>
-    <version>TBD</version>
+    <version>300</version>
   </parent>
 
   <dependencies>
